20080403
 - (djm) [openbsd-compat/bsd-poll.c] Include stdlib.h to avoid compile-
   time warnings on LynxOS. Patch from ops AT iki.fi

20080403
 - (djm) OpenBSD CVS sync:
   - markus@cvs.openbsd.org 2008/04/02 15:36:51
     [channels.c]
     avoid possible hijacking of x11-forwarded connections (back out 1.183)
     CVE-2008-1483; ok djm@
   - jmc@cvs.openbsd.org 2008/03/27 22:37:57
     [sshd.8]
     remove trailing whitespace;
   - djm@cvs.openbsd.org 2008/04/03 09:50:14
     [version.h]
     openssh-5.0
 - (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
   [contrib/suse/openssh.spec] Crank version numbers in RPM spec files
 - (djm) [README] Update link to release notes
 - (djm) Release 5.0p1

20080315
 - (djm) [regress/test-exec.sh] Quote putty-related variables in case they are
   empty; report and patch from Peter Stuge
 - (djm) [regress/test-exec.sh] Silence noise from detection of putty
   commands; report from Peter Stuge
 - (djm) [session.c] Relocate incorrectly-placed closefrom() that was causing
   crashes when used with ChrootDirectory


20080327
 - (dtucker) Cache selinux status earlier so we know if it's enabled after a
   chroot.  Allows ChrootDirectory to work with selinux support compiled in
   but not enabled.  Using it with selinux enabled will require some selinux
   support inside the chroot.  "looks sane" djm@
 - (djm) Fix RCS ident in sftp-server-main.c
 - (djm) OpenBSD CVS sync:
   - jmc@cvs.openbsd.org 2008/02/11 07:58:28
     [ssh.1 sshd.8 sshd_config.5]
     bump Mdocdate for pages committed in "febuary", necessary because
     of a typo in rcs.c;
   - deraadt@cvs.openbsd.org 2008/03/13 01:49:53
     [monitor_fdpass.c]
     Correct CMSG_SPACE and CMSG_LEN usage everywhere in the tree. Due to
     an extensive discussion with otto, kettenis, millert, and hshoexer
   - deraadt@cvs.openbsd.org 2008/03/15 16:19:02
     [monitor_fdpass.c]
     Repair the simple cases for msg_controllen where it should just be