@@ -1,6 +1,8 @@
 20080403
  - (djm) [openbsd-compat/bsd-poll.c] Include stdlib.h to avoid compile-
    time warnings on LynxOS. Patch from ops AT iki.fi
+ - (djm) Force string arguments to replacement setproctitle() though
+   strnvis first. Ok dtucker@
 
 20080403
  - (djm) OpenBSD CVS sync:
@@ -3855,4 +3857,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4904 2008/04/04 05:16:35 djm Exp $
+$Id: ChangeLog,v 1.4905 2008/05/16 00:01:54 djm Exp $
